--- a/order-entry-new.html
+++ b/order-entry-new.html
@@ -107,7 +107,7 @@
                             </a>
                         </li>
                         <!-- Shipping Manager -->
-                        <li>
+                        <li class="has-submenu">
                             <a href="shipping-manager.html" data-title="Shipping Manager">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -119,7 +119,17 @@
                                     <path d="M3 9l4 0" />
                                 </svg>
                                 <span class="menu-text">Shipping Manager</span>
+                                <svg class="menu-arrow" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                                    stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <polyline points="9 18 15 12 9 6"></polyline>
+                                </svg>
                             </a>
+                            <ul class="submenu">
+                                <li>
+                                    <a class="menu-item" href="shipping-manager-export-auto.html">Export Auto shipping </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="has-submenu">
                             <a href="#" class="menu-item" data-title="Reports">
